# Platformer

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
assets/maps/: decorations.tsx  level_00.tmx  oak_woods_tileset.tsx  platformer.tiled-project  platformer.tiled-session  template.tsx
assets/spt/: character_blue.spt
cmake/modules/: FindTMXLITE.cmake
src/: Actors.hpp  AnimationController.hpp  BackgroundSystem.cpp  BackgroundSystem.hpp  CMakeLists.txt  DebugDraw.cpp  DebugDraw.hpp  ErrorCheck.hpp  FSMSystem.cpp  GameState.cpp  GameState.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MapSystem.cpp  MapSystem.hpp  MenuState.cpp  MenuState.hpp  Messages.hpp  MyApp.cpp  MyApp.hpp  PhysicsObject.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerDirector.cpp  PlayerDirector.hpp  PlayerStateIDs.hpp  PlayerSystem.cpp  PlayerSystem.hpp  ResourceIDs.hpp  ShapeUserInfo.hpp  StateIDs.hpp  Utils.hpp  main.cpp
src/directors/: InputFlags.hpp  PlayerDirector.cpp  PlayerDirector.hpp
src/states/: PlayerAttackState.cpp  PlayerAttackState.hpp  PlayerDyingState.cpp  PlayerDyingState.hpp  PlayerFallingState.cpp  PlayerFallingState.hpp  PlayerIdleState.cpp  PlayerIdleState.hpp  PlayerJumpingState.cpp  PlayerJumpingState.hpp  PlayerSlidingState.cpp  PlayerSlidingState.hpp  PlayerState.cpp  PlayerState.hpp  PlayerStateIDs.hpp  PlayerWalkingState.cpp  PlayerWalkingState.hpp  PlayerWallSlidingState.cpp  PlayerWallSlidingState.hpp
src/systems/: AnimationController.cpp  AnimationController.hpp  BackgroundSystem.cpp  BackgroundSystem.hpp  DebugDraw.cpp  DebugDraw.hpp  FSMSystem.cpp  (+10 more)
(+1 files in other folders)
